# non-stationary-noise

./: README.md  pyproject.toml
data/ou/N_8192/med_T/: 1_sigma.npz  3_sigma.npz  6_sigma.npz
data/ou/N_8192/small_T/: 1_sigma.npz  3_sigma.npz  6_sigma.npz
data/ou/N_8192/tiny_T/: 1_sigma.npz  3_sigma.npz  6_sigma.npz
data/stat_ou/N_8192/: output.npz
data/stat_tlf_bath/N_65536/: output.npz
data/tlf_bath/N_65536/alphaplus125/: 1_sigma.npz  3_sigma.npz  6_sigma.npz
data/tlf_bath/N_65536/alphaplus150/: 1_sigma.npz  3_sigma.npz  6_sigma.npz
data/tlf_bath/N_65536/alphaplus175/: 1_sigma.npz  3_sigma.npz  6_sigma.npz
data_json/ou/N_8192/med_T/: 1_sigma.json  3_sigma.json  6_sigma.json
data_json/ou/N_8192/small_T/: 1_sigma.json  3_sigma.json  6_sigma.json
data_json/ou/N_8192/tiny_T/: 1_sigma.json  3_sigma.json  6_sigma.json
data_json/stat_ou/N_8192/: output.json
data_json/stat_tlf_bath/N_65536/: output.json
data_json/tlf_bath/N_65536/alphaplus125/: 1_sigma.json  3_sigma.json  6_sigma.json
data_json/tlf_bath/N_65536/alphaplus150/: 1_sigma.json  3_sigma.json  6_sigma.json
data_json/tlf_bath/N_65536/alphaplus175/: 1_sigma.json  3_sigma.json  6_sigma.json
notebooks/: figs.ipynb
scripts/: generate_signal.py  run_generation.sh
src/nonstationarynoise/: oneoverf.py  ornstein_uhlenbeck.py
