[tool.poetry]
name = "non-stationary-noise"
version = "0.1.0"
description = ""
authors = ["atacettin <efeakseltacettin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.5"
matplotlib = "^3.10.7"
scipy = "^1.16.3"

[[tool.poetry.packages]]
include = "nonstationarynoise"
from = "src"

[tool.poetry.group.dev.dependencies]
black = "^25.11.0"
pytest = "^9.0.1"
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
